--- a/public/about.html
+++ b/public/about.html
@@ -263,7 +263,7 @@
         <div class="cont-middle">
             <h3>Our Location</h3>
             <p>
-                Current location if Federal university of technology akure (FUTA), Akure, Nigeria.
+                Current location is Federal university of technology akure (FUTA), Akure, Nigeria.
             </p>
             <p>
                 Other locations: <br>
